# pyarrow_to_db2

./: README.md  hello_parquet.ini  hello_parquet.py
cextensions/: CMakeLists.txt  Resource.aps  Resource.rc  arrow_table_to_db2.h  arrow_table_to_db2_dict.h  build_name.py  find_db2_ver.py  logconfig.py  parse_arrow_dict.h  project_helper.cmake  setup.py  spclient_python.cpp  spclient_python_arrow_allocate_db2_time_structures.cpp  spclient_python_arrow_bind_generic.cpp  spclient_python_arrow_cpp_api.cpp  spclient_python_arrow_create_table.cpp  spclient_python_arrow_db2loadstructure.cpp  spclient_python_arrow_load.cpp  spclient_python_arrow_parse_column.cpp  spclient_python_arrow_table_to_db2.cpp  spclient_python_arrow_tokenize_sql.cpp  spclient_python_arrow_vector.cpp  spclient_python_arrow_vector_experimental.cpp  spclient_python_bind_generic.cpp  spclient_python_common.h  spclient_python_common_cpp.h  spclient_python_constants.cpp  spclient_python_constants_mon.cpp  spclient_python_constants_sqlcodes.cpp  spclient_python_constants_sqlenv.cpp  spclient_python_constants_sqlext.cpp  spclient_python_constants_sqlstate.cpp  spclient_python_create_table.cpp  spclient_python_db2loadstructure.cpp  spclient_python_describe_columns.cpp  spclient_python_describe_parameters.cpp  spclient_python_dummy_exception.cpp  spclient_python_get_db_size.cpp  spclient_python_monitor_load.cpp  spclient_python_set_loginfo.cpp  (+5 more)
cextensions/lin64/: db2ApiDf.h  sqladef.h  sqlaprep.h  sqlmon.h  sqlutil.h  utilcli.c  utilcli.cpp  utilcli.h
cextensions/osx/: db2ApiDf.h  sqladef.h  sqlaprep.h  sqlmon.h  sqlutil.h  utilcli.c  utilcli.h
cextensions/win64/: db2ApiDf.h  sqlaprep.h  sqlmon.h  utilcli.c  utilcli.cpp  utilcli.h
